mule-user-guide/v/3.3/configuring-a-transport.adoc
= 配置传输

您可以通过以下方式配置 link:/mule-user-guide/v/3.3/connecting-using-transports[运输]：

* 使用Mule XML配置文件中的`<connector>`元素定义连接器配置。
* 设置端点上的传输属性以自定义单个端点实例的传输行为。
* 使用定义传输方案和连接信息的端点URI，例如`tcp://localhost:12345`。有关更多信息，请参阅 link:/mule-user-guide/v/3.3/mule-endpoint-uris[Mule端点URI]。 URI包含协议，然后是特定于传输的信息，然后包含零个或多个参数，以在连接器上设置属性。

该页面描述了所有传输的通用属性。每种运输类型的实际配置参数分别描述。要查看特定传输的详细信息，请参阅 link:/mule-user-guide/v/3.3/transports-reference[传输参考]。

== 通用连接器属性

所有连接器都要求您将`name`属性设置为该连接器的唯一名称。此外，它们都包含以下常见属性。

[%header%autowidth.spread]
|===
|属性 |说明 |缺省 |必
| default-connector-exception-strategy  |连接器中发生错误时使用的 link:/mule-user-guide/v/3.3/error-handling[例外策略]。 |   |否
| receiver-threading-profile  |接收来自连接器的事件时使用的线程属性和 http://java.sun.com/j2ee/1.4/docs/api/javax/resource/spi/work/WorkManager.html[WorkManager中]。 link:/mule-user-guide/v/3.3/about-the-xml-configuration-file[骡子配置]在{{1} }  |是
| dispatcher-threading-profile  |从连接器分派事件时使用的线程属性和 http://java.sun.com/j2ee/1.4/docs/api/javax/resource/spi/work/WorkManager.html[WorkManager中]。 link:/mule-user-guide/v/3.3/about-mule-configuration[骡子配置]在{{1} }。 |是
|连接策略 |不支持Mule 2.0。改为使用 link:/mule-user-guide/v/3.3/configuring-reconnection-strategies[重试策略]。 |   |否
|服务覆盖 |可用于覆盖此传输的默认配置的服务配置值的映射。 |   |否
| createMultipleTransactedReceivers  |是否为此连接器创建多个并发接收器。该属性由支持事务的传输使用，特别是扩展TransactedPollingMessageReceiver的接收器，并提供更好的吞吐量。 | false  |否
| numberOfConcurrentTransactedReceivers  |如果`createMultipleTransactedReceivers`设置为true，则将启动的并发接收器数量为 |   |否
| dynamicNotification  |是否启用动态通知。 | false  |否
| validateConnections  |使Mule在使用前验证连接。请注意，这只是一个配置提示;传输实现可能会或可能不会做出额外的努力来验证连接。 | true  |否
|===

== 在连接器上设置弹簧属性

您还可以在连接器上设置Spring属性。如果您使用自定义连接器，此功能特别有用。

例如，您可以设置一个Spring属性来定义套接字在TCP或HTTP连接器上保持打开状态的最长时间，无论客户端发生什么或客户端传输数据。为此，请包含一个Spring属性以定义`keepAliveTimeout`属性的值，如下所示：

[source, xml, linenums]
----
xmlns:spring="http://www.springframework.org/schema/beans"
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
 
...
  
  <http:connector name="httpConnector">
        <spring:property name="keepAliveTimeout" value="5000" />
  </http:connector>
----

请注意，此keepAliveTimout示例仅与TCP和HTTP连接器相关，并且可能无法与其他连接器一起使用。

有关设置Spring属性的信息，请参阅 link:/mule-user-guide/v/3.6/using-mule-with-spring[春天使用骡子]。

== 重试策略

重试策略用于配置连接器在连接失败时的行为方式。有关完整信息，请参阅 link:/mule-user-guide/v/3.3/configuring-reconnection-strategies[配置重新连接策略]。

== 创建您自己的传输

有关为Mule ESB创建自定义传输的信息，请参阅 link:/mule-user-guide/v/3.3/creating-transports[创建传输]。

== 详细配置信息

== 接收器线程配置文件

连接器接收消息时使用的线程配置文件。

接收器线程配置文件的=== 属性

[%header%autowidth.spread]
|===
| {名称{1}}输入|必|说明
| maxThreadsActive | int |否|要使用的最大线程数。
| maxThreadsIdle | int |否|在池被销毁之前可以在池中的最大空闲或非活动线程数。
| doThreading |布尔值|否|是否应该使用线程（默认为true）。
| threadTTL | int |否|确定非活动线程在放弃之前保留在池中的时间。
| poolExhaustedAction |枚举|否|当最大池大小或队列大小有界时，此值确定如何处理传入任务。可能的值有：WAIT（等待线程变为可用;如果线程的最小数量为零，则不使用此值，在这种情况下线程可能永远不可用），DISCARD（丢弃当前请求并返回）， DISCARD_OLDEST（扔掉最老的请求并返回），ABORT（抛出一个RuntimeException）和RUN（默认值;执行请求的线程运行任务本身，这有助于防止锁定）。
| threadWaitTimeout | int |否|当池耗尽操作等待时，以毫秒为单位等待多久。如果该值为负值，则无限期等待。
| maxBufferSize | int |否|确定当池的最大使用容量和池已用尽操作为WAIT时排队的请求数。该缓冲区被用作溢出。
|===

没有子元素。

=== 调度程序线程配置文件

连接器调度消息时使用的线程配置文件。

==== 调度程序线程配置文件的属性

[%header%autowidth.spread]
|===
| {名称{1}}输入|必|说明
| maxThreadsActive | int |否|要使用的最大线程数。
| maxThreadsIdle | int |否|在池被销毁之前可以在池中的最大空闲或非活动线程数。
| doThreading |布尔值|否|是否应该使用线程（默认为true）。
| threadTTL | int |否|确定非活动线程在放弃之前保留在池中的时间。
| poolExhaustedAction |枚举|否|当最大池大小或队列大小有界时，此值确定如何处理传入任务。可能的值有：WAIT（等待线程变为可用;如果线程的最小数量为零，则不使用此值，在这种情况下线程可能永远不可用），DISCARD（丢弃当前请求并返回）， DISCARD_OLDEST（扔掉最老的请求并返回），ABORT（抛出一个RuntimeException）和RUN（默认值;执行请求的线程运行任务本身，这有助于防止锁定）。
| threadWaitTimeout | int |否|当池耗尽操作等待时，以毫秒为单位等待多久。如果该值为负值，则无限期等待。
| maxBufferSize | int |否|确定当池的最大使用容量和池已用尽操作为WAIT时排队的请求数。该缓冲区被用作溢出。
|===

没有子元素。

=== 服务覆盖

服务覆盖允许通过允许部分传输实现被覆盖来进一步配置/定制连接器，例如，消息接收器或调度器实现，或者使用的消息适配器。

==== 服务覆盖的属性

这些属性没有默认值或描述。所有属性都是字符串，不需要任何属性。
没有用于覆盖服务的子元素。

属性：

*  defaultExchangePattern
*  dispatcherFactory
*  endpointBuilder
*  inboundExchangePatterns
*  inboundTransformer
* 的MessageFactory
* 的messageReceiver
*  outboundExchangePatterns
*  outboundTransformer
*  responseTransformer
*  serviceFinder
*  sessionHandler
*  transactedMessageReceiver
*  xaTransactedMessageReceiver
